Add missing `version-info` cells to notebooks

--- a/docs/guides/fractional-gates.ipynb
+++ b/docs/guides/fractional-gates.ipynb
@@ -5,8 +5,24 @@
    "id": "116af785-a9b7-4eaf-8a86-b1eeb235da18",
    "metadata": {},
    "source": [
-    "# Fractional gates\n",
-    "\n",
+    "# Fractional gates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d679872",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0d7fa16",
+   "metadata": {},
+   "source": [
     "This page introduces two newly supported gate types on the IBM Quantum&reg; fleet of QPUs. These *fractional* gates are supported on [Heron QPUs](/guides/processor-types#heron) in the form of:\n",
     "- $R_{ZZ}(\\theta)$ for $0 \\lt \\theta \\leq \\pi/2$\n",
     "- $R_X(\\theta)$ for any $\\theta$\n",
