--- a/docs/guides/qiskit-addons-aqc-get-started.ipynb
+++ b/docs/guides/qiskit-addons-aqc-get-started.ipynb
@@ -5,8 +5,24 @@
    "id": "ceff06e5-ea87-4526-a726-c9345f55e592",
    "metadata": {},
    "source": [
-    "# Getting started with Approximate quantum compilation with tensor networks (AQC-Tensor)\n",
-    "\n",
+    "# Getting started with Approximate quantum compilation with tensor networks (AQC-Tensor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb4ff5eb",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8d85b16",
+   "metadata": {},
+   "source": [
     "This guide demonstrates a simple working example to get started with AQC-Tensor. In this example, you will take a Trotter circuit which simulates the evolution of a transverse field Ising model and use the AQC-Tensor method to reduce the resulting circuit depth. In addition, this example requires the `qiskit-addon-utils` package for the problem generator, `qiskit-aer` for the tensor-network simulation, and `scipy` for the parameter optimization.\n",
     "\n",
     "To begin, recall that the Hamiltonian of the transverse field Ising model has the form\n",
