--- a/docs/guides/qiskit-addons-sqd-get-started.ipynb
+++ b/docs/guides/qiskit-addons-sqd-get-started.ipynb
@@ -5,8 +5,24 @@
    "id": "b8f25160-5130-4913-9330-648444d5c77f",
    "metadata": {},
    "source": [
-    "# Getting started with Sample-based quantum diagonalization (SQD)\n",
-    "\n",
+    "# Getting started with Sample-based quantum diagonalization (SQD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b756474e",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "609913a6",
+   "metadata": {},
+   "source": [
     "This guide demonstrates a simple working example to get started with the `qiskit-addons-sqd` package. In this example, you can use SQD to obtain an approximation of the ground state of the $N_2$ molecule at equilibrium.\n",
     "\n",
     "To begin, recall that the generic interacting-electron Hamiltonian has the form:\n",
