--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -26,8 +26,24 @@
     "* This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/algorithmiq-tem)\n",
     "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
-    "</CloudContent>\n",
-    "\n",
+    "</CloudContent>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5773f7a",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47066e9a",
+   "metadata": {},
+   "source": [
     "## Overview\n",
     "\n",
     "Algorithmiq’s Tensor-network Error Mitigation (TEM) method is a hybrid\n",
