--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -18,8 +18,24 @@
     "* This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/ibm-circuit-function)\n",
     "* Qiskit Functions are an experimental feature available only to IBM Quantum&reg; Premium Plan users. They are in preview release status and subject to change.\n",
     "</Admonition>\n",
-    "</CloudContent>\n",
-    "\n",
+    "</CloudContent>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "904dadeb",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64b16815",
+   "metadata": {},
+   "source": [
     "## Overview\n",
     "\n",
     "The IBM&reg; Circuit function takes [abstract PUBs](./primitive-input-output) as inputs, and returns mitigated expectation values as outputs. This circuit function includes an automated and customized pipeline to enable researchers to focus on algorithm and application discovery."
