--- a/docs/guides/specify-runtime-options.ipynb
+++ b/docs/guides/specify-runtime-options.ipynb
@@ -5,8 +5,24 @@
    "id": "8bbb8d7d-bcd5-4092-9df1-9930c67b17bc",
    "metadata": {},
    "source": [
-    "# Specify options\n",
-    "\n",
+    "# Specify options"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73e3d6f4",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fdcbe4a",
+   "metadata": {},
+   "source": [
     "You can use options to customize the Estimator and Sampler primitives. This section focuses on how to specify Qiskit Runtime primitive options. While the interface of the primitives' `run()`  method is common across all implementations, their options are not. Consult the corresponding API references for information about the [`qiskit.primitives`](/api/qiskit/primitives#primitives) and [`qiskit_aer.primitives`](https://qiskit.github.io/qiskit-aer/apidocs/aer_primitives.html) options.\n",
     "\n",
     "Notes about specifying options in the primitives:\n",
