--- a/docs/guides/access-groups.mdx
+++ b/docs/guides/access-groups.mdx
@@ -11,7 +11,7 @@ This documentation is relevant to the new IBM Quantum&reg; Platform. If you need
 
 When you create an instance in IBM Quantum Platform, an access group is automatically generated (unless you opt out) for access to that instance. If you want to customize an access group for an instance, or create other access groups, use the IBM&reg; Cloud console for [Access groups.](https://cloud.ibm.com/iam/groups)
 
-An _access group_ contains _policies_, which define the actions that access group members can take on specific resources.  In this guide, the resource is always  an IBM Quantum _service instance_.
+An _access group_ contains _policies_, which define the actions that access group members can take on specific resources, such as services.  In this guide, the resource is generally an IBM Quantum _service instance_.
 
 <Admonition type="note">
 After an access group is created, you can invite users to the group by using the IBM Quantum Platform [Access management](https://quantum.cloud.ibm.com/admin/access-groups) page in the left-hand menu.
@@ -24,12 +24,11 @@ After setting up an account for your organization, it's recommended that you cre
 
 When you create this access group, include the following policies:
 
-- Platform role:
-   - All Account Management services (viewer), needed for listing all the resource groups in the account.
-
-- Service roles:
-   - All IAM Account Management services (Administrator), required for inviting users, managing access groups and creating access policies.
-   - Qiskit Runtime Service (Manager, Administrator), required to manage all IBM Quantum instances in the account and view account usage analytics.
+- Qiskit Runtime service - Grant access to manage all IBM Quantum instances in the account and view account usage analytics.
+  - Manager service access role
+  - Administrator platform management access role
+- All account management services - Grant access to list all the resource groups in the account.
+  - Viewer platform management access role
 
 <Admonition type="note">
   Users with the `viewer` platform management role on all account management services can also view all account management services, such as billing. To prevent this extra view access, use the IBM Cloud CLI to give them access to just Resource groups:
@@ -157,7 +156,7 @@ Next, create policies for the Qiskit Runtime service and for All IAM Account Man
       - For **Value**, select the instance you want to grant access to. Click **Next**.
    - **Roles and actions** - Select the following values:
       - For **Service access**, select  **Manager**.
-      - For **Platform access**, select **Viewer**.
+      - For **Platform access**, select **Administrator**.
 
    At the bottom, click **Add**. You should see the policy on the right-hand panel. Click **Assign** at the bottom of the right-hand panel.
 
@@ -166,8 +165,8 @@ You have successfully created an access group with one policy.  Next, create a s
 1. In the same access group, click the **Access** tab, then click **Assign access**.
 1. In the **Create policy** page that opens, define these elements.
    - **Service** - Select **All IAM Account Management services**. Click **Next**.
-   - **Roles and actions** - For Platform access, select **Administrator**, Click **Next**.
-   At the bottom, click **Add**, then click **Assign**
+   - **Roles and actions** - For Platform access, select **Viewer**, Click **Next**.
+   At the bottom, click **Add**, then click **Assign**.
 
 Next, invite users to the access group.  You can do this from the access group's **Users** page, or by using the IBM Quantum Platform [Access management](https://quantum.cloud.ibm.com/admin/access-groups) page.
 
