--- a/docs/guides/access-groups.mdx
+++ b/docs/guides/access-groups.mdx
@@ -4,12 +4,12 @@ description: How to create and manage access groups for your organization's acco
 platform: cloud
 ---
 
-# Set up access policies and access groups
+# Create access policies and access groups
 <Admonition type="note">
 This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/admin/)
 </Admonition>
 
-When you create an instance in IBM Quantum Platform, an access group is automatically generated (unless you opt out) for access to that instance. If you want to customize an access group for an instance, or create other access groups, use the IBM&reg; Cloud console for [Access groups.](https://cloud.ibm.com/iam/groups)
+When you create an instance in IBM Quantum Platform, an access group is automatically generated (unless you opt out) for collaborators to use that instance. If you want to customize an access group or create other access groups, use the IBM&reg; Cloud console for [Access groups.](https://cloud.ibm.com/iam/groups)
 
 An _access group_ contains _policies_, which define the actions that access group members can take on specific resources, such as services.  In this guide, the resource is generally an IBM Quantum _service instance_.
 
@@ -25,10 +25,13 @@ After setting up an account for your organization, it's recommended that you cre
 When you create this access group, include the following policies:
 
 - Qiskit Runtime service - Grant access to manage all IBM Quantum instances in the account and view account usage analytics.
-  - Manager service access role
-  - Administrator platform management access role
+  - **Manager** service access role
+  - **Administrator** platform management access role
 - All account management services - Grant access to list all the resource groups in the account.
-  - Viewer platform management access role
+  - **Viewer** platform management access role
+- All IAM Account Management services - Grant access to invite users, manage access groups, and create access policies.
+  - **Administrator** platform management access role
+
 
 <Admonition type="note">
   Users with the `viewer` platform management role on all account management services can also view all account management services, such as billing. To prevent this extra view access, use the IBM Cloud CLI to give them access to just Resource groups:
@@ -42,7 +45,7 @@ Examples:
 <span id="cli"></span>
 ### Use the IBM Cloud CLI
 
-To create an _access group_ by using the CLI, use the [`ibmcloud iam access-group-create`(https://cloud.ibm.com/docs/cli?topic=cli-ibmcloud_commands_iam#ibmcloud_iam_access_group_policy_create)] command.
+To create an _access group_ by using the CLI, use the [`ibmcloud iam access-group-create`](https://cloud.ibm.com/docs/cli?topic=cli-ibmcloud_commands_iam#ibmcloud_iam_access_group_policy_create)] command.
 
 ```cli
 ibmcloud iam access-group-create GROUP_NAME [-d, --description DESCRIPTION]
@@ -140,13 +143,13 @@ You can use the following JSON code to create an Administrators access group:
 <span id="ui"></span>
 ### Use the IBM Cloud IAM user interface
 
-As an account owner or administrator, you add the people in your organization to the IBM Cloud account and then assign them access permissions to use an instance.
+As an account owner or administrator, follow these steps to create an IBM Quantum Administrator access group.
 
 1. Go to Manage > [Access (IAM)](https://cloud.ibm.com/iam/overview) in the IBM Cloud console.
 1. On the left panel in the **Manage access** section, click **Access groups**, then click **Create**.
 1. In the **Create access group** window that opens, add a name and description that represent the group of users that you will invite.  For example, IBM Quantum Administrators. Click **Create**.
 
-Next, create policies for the Qiskit Runtime service and for All IAM Account Management services.
+Next, create policies for the Qiskit Runtime service,  for All IAM Account Management services, and for All Account Management services.
 1. In the access group just created, click the **Access** tab, then click **Assign access**.
 1. In the **Create policy** page that opens, define these elements.
    - **Service** - Search for Qiskit Runtime and select it. Click **Next**.
@@ -158,17 +161,25 @@ Next, create policies for the Qiskit Runtime service and for All IAM Account Man
       - For **Service access**, select  **Manager**.
       - For **Platform access**, select **Administrator**.
 
-   At the bottom, click **Add**. You should see the policy on the right-hand panel. Click **Assign** at the bottom of the right-hand panel.
+   At the bottom, click **Add**. You should see the policy on the right-hand panel. Click **Assign** at the bottom of that panel.
 
 You have successfully created an access group with one policy.  Next, create a second policy for the same instance.
 
 1. In the same access group, click the **Access** tab, then click **Assign access**.
 1. In the **Create policy** page that opens, define these elements.
    - **Service** - Select **All IAM Account Management services**. Click **Next**.
+   - **Roles and actions** - For Platform access, select **Administrator**, Click **Next**.
+   At the bottom, click **Add**, then click **Assign**.
+
+Create a third policy for the same instance.
+
+1. In the same access group, click the **Access** tab, then click **Assign access**.
+1. In the **Create policy** page that opens, define these elements.
+   - **Service** - Select **All Account Management services**. Click **Next**.
    - **Roles and actions** - For Platform access, select **Viewer**, Click **Next**.
    At the bottom, click **Add**, then click **Assign**.
 
-Next, invite users to the access group.  You can do this from the access group's **Users** page, or by using the IBM Quantum Platform [Access management](https://quantum.cloud.ibm.com/admin/access-groups) page.
+finally, invite users to the access group.  You can do this from the access group's **Users** page, or by using the IBM Quantum Platform [Access management](https://quantum.cloud.ibm.com/admin/access-groups) page.
 
 Invited users will receive an email with an invitation to use this account with the defined access to the instance. After they accept the invitation, they will see a new account in their account switcher at the top of the IBM Quantum Platform page. After selecting the new account, they will see the shared instance.
 
@@ -179,5 +190,5 @@ Invited users will receive an email with an invitation to use this account with 
    - Understand the [IBM Cloud account structure,](/guides/cloud-account-structure) including access policies, groups, and roles.
    - Read about [how IBM Cloud IAM works.](https://cloud.ibm.com/docs/account?topic=account-iamoverview)
    - Read more about how to [set up access groups.](https://cloud.ibm.com/docs/account?topic=account-groups&interface=ui)
-   - Learn about [creating custom roles.](https://cloud.ibm.com/docs/account?topic=account-custom-roles&interface=ui)
+   - Learn about [creating custom roles.](/guides/custom-roles)
 </Admonition>
